--- a/.github/workflows/pr-checks.yml
+++ b/.github/workflows/pr-checks.yml
@@ -14,6 +14,9 @@ jobs:
             sudo apt-get install python3-pip python3-setuptools python3-wheel --assume-yes --install-recommends
             sudo pip3 install -r requirements.txt
 
+      - name: Check for broken redirects
+        run: ./tools/find-broken-redirects
+
       - name: Check for missing pages
         run: ./tools/find-missing
 
