--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,31 +1,15 @@
-nav:
-    - InspIRCd 3:
-        - Installation: 3/installation/index.md
-        - Configuration: 3/configuration/index.md
-        - Commands: 3/commands/index.md
-        - Channel Modes: 3/channel-modes.md
-        - User Modes: 3/user-modes.md
-        - Modules: 3/modules/index.md
-        - SNOMasks: 3/snomasks.md
-        - Change Log: 3/change-log.md
-    - Downloads: https://github.com/inspircd/inspircd/releases/latest
-    - Issue Tracker: https://github.com/inspircd/inspircd/issues
-    - Developer API: https://www.inspircd.org/api/
-markdown_extensions:
-    - admonition
-    - extra
-    - markdown_include.include:
-          base_path: docs
+INHERIT: mkdocs_dev.yml
+
 plugins:
-  - exclude:
-      glob:
-        - '**/_*'
-  - inspircd:
-  - minify:
+    # Only use minify when building for prod, as it takes a relatively
+    # long time to run.
+    minify:
       minify_html: true
       htmlmin_opts:
           remove_comments: true
-  - redirects:
+
+    # Don't need redirects in dev
+    redirects:
       redirect_maps:
           2/configuration/index.md: 3/configuration/index.md
           2/index.md: index.md
@@ -189,13 +173,3 @@ plugins:
           3/index.md: index.md
           3/modes.md: 3/channel-modes.md
           4/index.md: index.md
-  - search
-theme:
-  name: cinder
-  highlightjs: true
-  disable_nav_previous_next: true
-copyright: All documentation is licensed under the <a href="/license">GNU GPLv2</a>.
-repo_url: https://github.com/inspircd/inspircd-docs
-site_description: InspIRCd is a modular C++ Internet Relay Chat (IRC) server for UNIX-like and Windows systems.
-site_name: InspIRCd Documentation
-site_url: https://docs.inspircd.org/
