For each core config tag, list modules providing extra values.

--- a/docs/3/modules/callerid.yml
+++ b/docs/3/modules/callerid.yml
@@ -42,6 +42,7 @@ configuration:
     --------------------- | -----------
     users/ignore-callerid | Allows server operators to message users using callerid without being on their callerid list.
   attributes: []
+  extends: true
   details: ""
   example: |-
     Allows server operators with the class named BasicOper to message users using callerid without being on their callerid list.
