--- a/docs/3/modules/opermodes.yml
+++ b/docs/3/modules/opermodes.yml
@@ -7,6 +7,7 @@ configuration:
 - name: [<oper>, <type>]
   description: |-
     This module extends the core `<oper>` and `<type>` tags with the following fields:
+  extends: true
   attributes:
   - name: modes
     type: Text
