--- a/docs/3/modules/opermotd.yml
+++ b/docs/3/modules/opermotd.yml
@@ -7,6 +7,7 @@ configuration:
 - name: [<files>, <execfiles>]
   description: |-
     This module extends the core `<files>` and `<execfiles>` tags with the following fields:
+  extends: true
   attributes:
   - name: opermotd
     type: Text
