--- a/docs/3/modules/geoban.yml
+++ b/docs/3/modules/geoban.yml
@@ -9,8 +9,7 @@ extbans:
   - char: G
     type: Matching
     syntax: '`G:<pattern>`'
-    description: Matches against the two letter country code for the country that
-      users are connecting from.
+    description: Matches against the two letter country code for the country that users are connecting from.
   example: |-
     Bans users connecting from the United States of America:
 
