--- a/docs/3/modules/nickflood.yml
+++ b/docs/3/modules/nickflood.yml
@@ -39,5 +39,4 @@ chmodes:
 
 exemptions:
 - name: flood
-  description: Allows exempted users to change nicknames at a higher rate than channel
-    mode `F` (nickflood) allows.
+  description: Allows exempted users to change nicknames at a higher rate than channel mode `F` (nickflood) allows.
