--- a/docs/3/modules/stripcolor.yml
+++ b/docs/3/modules/stripcolor.yml
@@ -29,8 +29,7 @@ umodes:
 
 exemptions:
 - name: stripcolor
-  description: Allows exempted users to send messages that contain IRC formatting
-    codes.
+  description: Allows exempted users to send messages that contain IRC formatting codes.
 
 extbans:
   description: ""
@@ -38,8 +37,7 @@ extbans:
   - char: S
     type: Acting
     syntax: '`S:<mask>`'
-    description: Strips IRC formatting codes from messages sent by users matching
-      &lt;mask&gt;.
+    description: Strips IRC formatting codes from messages sent by users matching &lt;mask&gt;.
   example: |-
     Strips IRC formatting codes from users matching `*!*@example.com`:
 
