--- a/docs/3/modules/ssl_openssl.yml
+++ b/docs/3/modules/ssl_openssl.yml
@@ -11,10 +11,12 @@ description: |-
 configuration:
 - name: <bind>
   description: |-
-    This module extends [the core `<bind>` tags](/3/configuration#bind) with the following keys:
+    This module extends [the core `<bind>` tags](/3/configuration#bind) with the following fields:
   extends: true
-  added_values:
+  attributes:
   - name: ssl
+    type: Text
+    default: None
     description: |-
       *This MUST be set to the name of an OpenSSL TLS (SSL) profile to listen for secure connections with OpenSSL.*
   details: ""
