--- a/docs/3/configuration/_execfiles.yml
+++ b/docs/3/configuration/_execfiles.yml
@@ -1,6 +1,9 @@
 name: <execfiles>
 description: |-
-  The `<execfiles>` runs a shell command, and reads its output. The purpose of the output depends on what field commands are defined in.
+  The `<execfiles>` tag runs a shell command and reads its output. This tag can only be defined once.
+  
+  The purpose of the output depends on what field commands are defined in.
+  
 
   Note that commands are only run on rehash, so changes are not automatically detected.
 attributes:
