--- a/docs/3/configuration/_execfiles.yml
+++ b/docs/3/configuration/_execfiles.yml
@@ -14,7 +14,7 @@ attributes:
   description: |-
     A file used as the Message Of The Day, ie. shown to users when they connect or use the `/MOTD` command.
 details: |-
-  The working directory of the commands is InspIRCd's configuration directory. This is `/etc/inspircd` if installed with your package manager, and the main `conf/` directory otherwise. It is **NOT** the directory of the current config file.
+  The working directory of the directory use to run InspIRCd.
 example: |-
   Downloads `https://www.example.com/motd.txt` and uses it as Message Of The Day:
 
