Add extban names to the extban table.
These names are only really usable in v4 but adding them to the v3
lists will allow us to share data files across versions.

--- a/docs/3/modules/allowinvite.yml
+++ b/docs/3/modules/allowinvite.yml
@@ -16,7 +16,8 @@ chmodes:
 
 extbans:
   chars:
-  - char: A
+  - name: blockinvite
+    char: A
     type: Acting
     syntax: "`A:<mask>`"
     description: Bans &lt;mask&gt; from using the `/INVITE` command.
