--- a/docs/3/modules/operchans.yml
+++ b/docs/3/modules/operchans.yml
@@ -18,7 +18,8 @@ chmodes:
 extbans:
   description: ""
   chars:
-  - char: O
+  - name: oper
+    char: O
     type: Matching
     syntax: '`O:<pattern>`'
     description: Checks whether users are logged into a server operator account matching &lt;pattern&gt;.
