--- a/docs/3/modules/cgiirc.yml
+++ b/docs/3/modules/cgiirc.yml
@@ -151,7 +151,8 @@ example_commands: |-
 
 extbans:
   chars:
-  - char: w
+  - name: gateway
+    char: w
     type: Matching
     syntax: '`w:<pattern>`'
     description: "[**New in v3.10.0!**](/3/change-log/#inspircd-3100) Matches against the name of the gateway that WebIRC users are connecting from."
