--- a/docs/3/modules/classban.yml
+++ b/docs/3/modules/classban.yml
@@ -6,7 +6,8 @@ description: |-
 extbans:
   description: ""
   chars:
-  - char: n
+  - name: class
+    char: n
     type: Matching
     syntax: '`n:<pattern>`'
     description: Checks whether users are in a connect class &lt;pattern&gt;.
