--- a/docs/3/modules/nokicks.yml
+++ b/docs/3/modules/nokicks.yml
@@ -18,7 +18,8 @@ chmodes:
 extbans:
   description: ""
   chars:
-  - char: Q
+  - name: nokick
+    char: Q
     type: Acting
     syntax: '`Q:<mask>`'
     description: Bans privileged users matching &lt;mask&gt; from using the `/KICK` command.
