--- a/docs/3/modules/nonotice.yml
+++ b/docs/3/modules/nonotice.yml
@@ -22,7 +22,8 @@ exemptions:
 extbans:
   description: ""
   chars:
-  - char: T
+  - name: nonotice
+    char: T
     type: Acting
     syntax: '`T:<mask>`'
     description: Bans &lt;mask&gt; from sending messages with the `/NOTICE` command.
