Move the version things were added in to their own metadata field.

--- a/docs/3/configuration/_class.yml
+++ b/docs/3/configuration/_class.yml
@@ -36,8 +36,9 @@ attributes:
   type: Text
   required: false
   default: \*
+  added: 3.6.0
   description: |-
-    [**New in v3.6.0!**](/3/change-log/#inspircd-360) The server operator-only snomasks that server operators with this class can change.
+    The server operator-only snomasks that server operators with this class can change.
 details: |+
   {! 3/configuration/_class_privs.md !}
 
