--- a/docs/3/modules/helpop.yml
+++ b/docs/3/modules/helpop.yml
@@ -33,8 +33,9 @@ configuration:
     type: Text
     required: false
     default: None
+    added: 3.5.0
     description: |-
-      [**New in v3.5.0!**](/3/change-log/#inspircd-350) The header for the help topic.
+      The header for the help topic.
   - name: value
     type: Text
     required: false
