--- a/docs/3/modules/messageflood.yml
+++ b/docs/3/modules/messageflood.yml
@@ -12,20 +12,23 @@ configuration:
     type: Decimal
     required: false
     default: 1.0
+    added: 3.2.0
     description: |-
-      [**New in v3.2.0!**](/3/change-log/#inspircd-320) The number of lines that a single `NOTICE` message is equivalent to.
+      The number of lines that a single `NOTICE` message is equivalent to.
   - name: privmsg
     type: Decimal
     required: false
     default: 1.0
+    added: 3.2.0
     description: |-
-      [**New in v3.2.0!**](/3/change-log/#inspircd-320) The number of lines that a single `PRIVMSG` message is equivalent to.
+      The number of lines that a single `PRIVMSG` message is equivalent to.
   - name: tagmsg
     type: Decimal
     required: false
     default: 0.2
+    added: 3.2.0
     description: |-
-      [**New in v3.2.0!**](/3/change-log/#inspircd-320) The number of lines that a single `NOTICE` message is equivalent to. This should be lower than the other commands to avoid users being kicked by automated client features such as typing notifications.
+      The number of lines that a single `NOTICE` message is equivalent to. This should be lower than the other commands to avoid users being kicked by automated client features such as typing notifications.
   details: ""
   example: |-
     ```xml
