--- a/docs/3/modules/sqlauth.yml
+++ b/docs/3/modules/sqlauth.yml
@@ -63,13 +63,13 @@ configuration:
 
     Variable    | Description
     ----------- | -----------
-    $gecos      | The real name (gecos) of the connecting user.
     $host       | The real hostname of the connecting user.
     $ident      | The username (ident) of the connecting user.
     $ip         | The IP address of the connecting user.
     $md5pass    | An MD5 hash of the password sent with `/PASS` by the connecting user (requires [the md5 module](/3/modules/md5)).
     $nick       | The nickname of the connecting user.
     $pass       | The password sent with `/PASS` by the connecting user.
+    $real       | The real name (gecos) of the connecting user.
     $server     | The name of the server the connecting user connected to.
     $sha256pass | A SHA-256 hash of the password sent with `/PASS` by the connecting user (requires [the sha256 module](/3/modules/sha256)).
     $uuid       | The UUID of the connecting user.
