--- a/docs/3/modules/geoban.yml
+++ b/docs/3/modules/geoban.yml
@@ -1,7 +1,7 @@
 name: geoban
 
 description: |-
-  This module adds extended ban `G:` which matches against two letter country codes.
+  This module adds extended ban `G:` (country) which matches against two letter country codes.
 
 extbans:
   description: ""
