--- a/docs/3/modules/allowinvite.yml
+++ b/docs/3/modules/allowinvite.yml
@@ -1,7 +1,7 @@
 name: allowinvite
 
 description: |-
-  This module adds channel mode `A` (allowinvite) which allows unprivileged users to use the `/INVITE` command and extended ban `A:` which bans specific masks from using the `/INVITE` command.
+  This module adds channel mode `A` (allowinvite) which allows unprivileged users to use the `/INVITE` command and extended ban `A:` (blockinvite) which bans specific masks from using the `/INVITE` command.
 
 chmodes:
   chars:
