--- a/docs/3/modules/gecosban.yml
+++ b/docs/3/modules/gecosban.yml
@@ -1,7 +1,7 @@
 name: gecosban
 
 description: |-
-  This module adds extended ban `r:` which checks whether users have a real name (gecos) matching the specified glob pattern.
+  This module adds extended bans `a:` (realmask) and `r:`(realname) which checks whether users have a real name (gecos) matching the specified glob pattern.
 
 extbans:
   description: ""
